package com.you.lld.problems.library.model;

public enum BookStatus {
    AVAILABLE, BORROWED, RESERVED, MAINTENANCE
}
